Chronological listing of changes. If a particular SVN revision has no entry, that
check-in did not involve any code or feature changes.

2009-10-16 (r55)

* Fixed broken test for array argument descciptions (Craig Beck)
* Disambiguated mock table method name to avoid compiler warning
* Renamed some variables to avoid warnings when using -Wshadow
* Partial mocks are now deallocated as they should
* Fixed problems that occured when using mocks as arguments


2009-08-18 (r54)

* OnCall methods now have same signature as replaced ones.


2009-08-14 (r53)

* Fixed possible retain bug (Daniel Eggert)


2009-08-14 (r52)

* Added feature that allows to verify expectations are called in sequence.
* Improved detection of unqualified method return type.


2009-08-13 (r51)

* Fixed bug that caused crash when using method swizzling with void return type.


2009-07-14 (r49)

* Added support for calling arbitrary methods when stubbed methods are invoked.


2009-07-14 (r48)

* Added support for posting notifications (based on Jean-Francois Dontigny's code)


2009-07-14 (r46)

* Fixed bug around complex type encodings (Jean-Francois Dontigny)


2009-05-26 (r45)

* Partial mocks now work on object reference and self (thanks to Mike Mangino)


2009-04-24 (r43)

* Added partial mocks (calls to the original object reference cannot be mocked)


2009-04-17 (r42)

* Mock observers now handle user infos on notifications.


2009-04-09 (r39)

* Added inital support for mock observers (loosely based on Dave Dribbin's idea)


2009-04-08 (r38)

* Moved factory methods from OCMConstraint to OCMArg


2009-03-13 (r37)

* Added pass by ref argument setters


2009-03-11 (r34)

* Linked install name now uses @rpath (Dave Dribbin)


2009-02-22 (r32)

* Added support for respondsToSelector (Dave Dribin)
* Added constraint for any pointer 
* Now comparing selectors as strings (Dado Colussi)


2008-07-07 (r28)

* Resetting invocation target in recorder to avoid retain cycles.


2008-06-19 (r27)
