@@ -1,9 +1,10 @@
 //---------------------------------------------------------------------------------------
-//  $Id: $
-//  Copyright (c) 2007-2009 by Mulle Kybernetik. See License file for details.
+//  $Id$
+//  Copyright (c) 2007-2010 by Mulle Kybernetik. See License file for details.
 //---------------------------------------------------------------------------------------
 
 #import <Foundation/Foundation.h>
+
 
 @interface OCMConstraint : NSObject 
 
@@ -12,10 +13,11 @@
 
 // if you are looking for any, isNil, etc, they have moved to OCMArg
 
+// try to use [OCMArg checkWith...] instead of the constraintWith... methods below
+
 + (id)constraintWithSelector:(SEL)aSelector onObject:(id)anObject;
 + (id)constraintWithSelector:(SEL)aSelector onObject:(id)anObject withValue:(id)aValue;
 
-// try to use [OCMArg checkWith...] instead of constraintWithSelector in here
 
 @end
 
@@ -43,6 +45,20 @@
 }
 
 @end
+
+#ifdef MAC_OS_X_VERSION_10_6
+
+@interface OCMBlockConstraint : OCMConstraint
+{
+	BOOL (^block)(id);
+}
+
+- (id)initWithConstraintBlock:(BOOL (^)(id))block;
+
+@end
+
+#endif
+
 
 #define CONSTRAINT(aSelector) [OCMConstraint constraintWithSelector:aSelector onObject:self]
 #define CONSTRAINTV(aSelector, aValue) [OCMConstraint constraintWithSelector:aSelector onObject:self withValue:(aValue)]
